basic files and folder

--- a/package.json
+++ b/package.json
@@ -2,18 +2,24 @@
   "name": "api-express-graphql-master",
   "version": "1.0.0",
   "description": "",
-  "main": "gql-server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon gql-server.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yasniel Fajardo Egues",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.1.1",
+    "@graphql-tools/load-files": "^6.3.2",
+    "@graphql-tools/merge": "^6.2.16",
     "apollo-server-express": "^3.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
-    "nodemon": "^2.0.12"
+    "graphql-tools": "^8.0.0",
+    "mongoose": "^5.13.5",
+    "nodemon": "^2.0.12",
+    "path": "^0.12.7"
   }
 }
