--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
   "author": "Yasniel Fajardo Egues",
   "license": "ISC",
   "dependencies": {
-    "@graphql-tools/load-files": "^6.3.2",
-    "@graphql-tools/merge": "^6.2.16",
     "apollo-server-express": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "mongoose": "^5.13.5",
-    "nodemon": "^2.0.12",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.12"
   }
 }
